Simple Grid View designed

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -9,7 +9,12 @@
         android:id="@+id/Home_SPGridView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:numColumns="3"
-    />
+        android:numColumns="auto_fit"
+        android:columnWidth="90dp"
+        android:verticalSpacing="10dp"
+        android:horizontalSpacing="10dp"
+        android:stretchMode="columnWidth"
+        android:gravity="center"
+        />
 
 </RelativeLayout>
