--- a/app/src/main/res/layout/cell_title.xml
+++ b/app/src/main/res/layout/cell_title.xml
@@ -3,7 +3,8 @@
     android:id="@+id/SPTitleCell"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    >
 
 <TextView
     android:id="@+id/SPTitleCell_TextView"
