--- a/app/src/main/res/layout/cell_title.xml
+++ b/app/src/main/res/layout/cell_title.xml
@@ -10,6 +10,7 @@
     android:id="@+id/SPTitleCell_TextView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:text="Sample"/>
+    android:text="Sample"
+    android:gravity="center"/>
 
 </com.happyfall.speedkit.cells.SPTitleCell>
