--- a/app/src/main/res/layout/recycler_cell_checklist.xml
+++ b/app/src/main/res/layout/recycler_cell_checklist.xml
@@ -20,7 +20,7 @@
         android:layout_height="wrap_content"
         android:text="Hello There!"
         android:gravity="center_vertical"
-        android:textSize="18dp" />
+        android:textSize="18sp" />
 
     <ImageView
         android:id="@+id/SPCheckList_ImageView"
@@ -35,6 +35,7 @@
         android:layout_width="fill_parent"
         android:layout_height="1px"
         android:background="@android:color/darker_gray"
-        android:layout_marginLeft="10dp"/>
+        android:layout_marginLeft="10dp"
+        android:layout_marginStart="10dp"/>
 
 </LinearLayout>
