--- a/uiautomation/src/main/res/layout/recycler_cell_checklist.xml
+++ b/uiautomation/src/main/res/layout/recycler_cell_checklist.xml
@@ -28,11 +28,6 @@
 
     </LinearLayout>
 
-    <View
-        android:layout_width="fill_parent"
-        android:layout_height="1px"
-        android:background="@android:color/darker_gray"
-        android:layout_marginLeft="10dp"
-        android:layout_marginStart="10dp"/>
+    <include layout="@layout/cell_separator"/>
 
 </LinearLayout>
