sliding tab color changed

--- a/app/src/main/res/layout/fragment_sliding_tabs.xml
+++ b/app/src/main/res/layout/fragment_sliding_tabs.xml
@@ -7,7 +7,8 @@
     <com.example.android.common.view.SlidingTabLayout
         android:id="@+id/sliding_tabs"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:background="@color/white90"/>
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
