--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -13,6 +13,7 @@
     <style name="AppActionBar" parent="Widget.AppCompat.ActionBar.Solid">
         <item name="android:elevation">2dp</item>
         <item name="android:background">@color/material_blue_grey_800</item>
+        <!--<item name="android:titleTextStyle">@style/MyActionBarTitleText</item>-->
 
 
         <!-- Support library compatibility -->
@@ -20,5 +21,6 @@
         <item name="background">@color/material_blue_grey_800</item>
 
     </style>
+
 
 </resources>
