--- a/uiautomation/src/main/res/layout/fragment_sliding_tabs.xml
+++ b/uiautomation/src/main/res/layout/fragment_sliding_tabs.xml
@@ -1,8 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/sliding_tabs_fragment_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:clipToPadding="false">
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewpager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:clipToPadding="false"
+        android:background="@android:color/white"/>
 
     <com.example.android.common.view.SlidingTabLayout
         android:id="@+id/sliding_tabs"
@@ -10,11 +19,4 @@
         android:layout_height="wrap_content"
         android:background="@color/white90"/>
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/viewpager"
-        android:layout_width="match_parent"
-        android:layout_height="0px"
-        android:layout_weight="1"
-        android:background="@android:color/white"/>
-
-</LinearLayout>
+</RelativeLayout>
