--- a/uiautomation/src/main/res/layout/fragment_dark_toolbar_tabs.xml
+++ b/uiautomation/src/main/res/layout/fragment_dark_toolbar_tabs.xml
@@ -21,13 +21,15 @@
             android:layout_height="?attr/actionBarSize"
             android:layout_width="match_parent"
             app:layout_scrollFlags="scroll|enterAlways"
+            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             />
 
         <android.support.design.widget.TabLayout
             android:id="@+id/toolbar_tabs_tablayout"
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
-            app:layout_scrollFlags="enterAlways"/>
+            app:layout_scrollFlags="enterAlways"
+            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
 
     </android.support.design.widget.AppBarLayout>
 
