--- a/uiautomation/src/main/res/layout/recycler_cell_title.xml
+++ b/uiautomation/src/main/res/layout/recycler_cell_title.xml
@@ -1,15 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-    <TextView
-        android:padding="10dp"
-        android:id="@+id/SPTitleViewHolder_TextView"
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <data>
+        <variable name="viewModel" type = "com.speedui.android.uiautomation.listingautomation.recyclerview.cells.SPTitleViewHolder.ViewModel"/>
+    </data>
+
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Recycler Cell"
-        android:textSize="17sp"/>
+        android:layout_height="wrap_content">
+        <TextView
+            android:padding="10dp"
+            android:id="@+id/SPTitleViewHolder_TextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@{viewModel.titleText}"
+            android:textSize="17sp" />
 
-    <include layout="@layout/cell_separator"/>
+        <include layout="@layout/cell_separator"/>
 
-</LinearLayout>
+    </LinearLayout>
+
+</layout>
