--- a/uiautomation/src/main/res/layout/recycler_cell_checklist.xml
+++ b/uiautomation/src/main/res/layout/recycler_cell_checklist.xml
@@ -1,33 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    <data>
+
+        <import type="android.view.View"/>
+
+        <variable name="viewModel" type = "com.speedui.android.uiautomation.listingautomation.recyclerview.cells.SPCheckListViewHolder.ViewModel"/>
+
+    </data>
 
     <LinearLayout
+        android:orientation="vertical" android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:padding="10dp"
-        android:orientation="horizontal">
+        app:setOnClickListener="@{viewModel.onClickListener}">
 
-    <TextView
-        android:id="@+id/SPCheckList_TextView"
-        android:layout_weight="1"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Hello There!"
-        android:gravity="center_vertical"
-        android:textSize="17sp" />
+        <LinearLayout
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:padding="10dp"
+            android:orientation="horizontal"
+            >
 
-    <ImageView
-        android:id="@+id/SPCheckList_ImageView"
-        android:layout_width="28dp"
-        android:layout_height="28dp"
-        android:layout_gravity="center_vertical"
-        android:background="@mipmap/ic_action_accept" />
+            <TextView
+                android:id="@+id/SPCheckList_TextView"
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="@{viewModel.titleText}"
+                android:gravity="center_vertical"
+                android:textSize="17sp" />
+
+            <ImageView
+                android:id="@+id/SPCheckList_ImageView"
+                android:layout_width="28dp"
+                android:layout_height="28dp"
+                android:layout_gravity="center_vertical"
+                android:background="@mipmap/ic_action_accept"
+                android:visibility="@{viewModel.isSelected ? View.VISIBLE : View.INVISIBLE}"
+                />
+
+        </LinearLayout>
+
+        <include layout="@layout/cell_separator"/>
 
     </LinearLayout>
 
-    <include layout="@layout/cell_separator"/>
-
-</LinearLayout>
+</layout>
