--- a/uiautomation/src/main/res/layout/recycler_cell_title.xml
+++ b/uiautomation/src/main/res/layout/recycler_cell_title.xml
@@ -11,13 +11,19 @@
         android:layout_height="wrap_content">
         <TextView
             android:padding="10dp"
-            android:id="@+id/SPTitleViewHolder_TextView"
+            android:id="@+id/sptitle_TextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@{viewModel.titleText}"
             android:textSize="17sp" />
 
-        <include layout="@layout/cell_separator"/>
+        <View
+            android:id="@+id/sptitle_cell_separator"
+            android:layout_width="fill_parent"
+            android:layout_height="1px"
+            android:background="@android:color/darker_gray"
+            android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"/>
 
     </LinearLayout>
 
