Project updated to latest data binding and build tools

--- a/uiautomation/src/main/res/layout/recycler_cell_checklist.xml
+++ b/uiautomation/src/main/res/layout/recycler_cell_checklist.xml
@@ -37,7 +37,7 @@
                 android:layout_height="28dp"
                 android:layout_gravity="center_vertical"
                 android:background="@mipmap/ic_action_accept"
-                android:visibility="@{viewModel.isSelected ? View.VISIBLE : View.INVISIBLE}"
+                android:visibility="@{viewModel.selected ? View.VISIBLE : View.INVISIBLE}"
                 />
 
         </LinearLayout>
