--- a/uiautomation/src/main/res/layout/recycler_cell_title.xml
+++ b/uiautomation/src/main/res/layout/recycler_cell_title.xml
@@ -2,7 +2,7 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data>
-        <variable name="viewModel" type = "com.speedui.android.uiautomation.listingautomation.recyclerview.cells.SPTitleViewHolder.ViewModel"/>
+        <variable name="titleRModel" type = "com.speedui.android.uiautomation.listingautomation.recyclerview.cells.TitleRModel"/>
     </data>
 
     <LinearLayout
@@ -14,7 +14,7 @@
             android:id="@+id/sptitle_TextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@{viewModel.titleText}"
+            android:text="@{titleRModel.mTitle}"
             android:textSize="17sp" />
 
         <View
