--- a/uiautomation/src/main/res/layout/fragment_dark_toolbar_tabs.xml
+++ b/uiautomation/src/main/res/layout/fragment_dark_toolbar_tabs.xml
@@ -21,7 +21,7 @@
             android:layout_height="?attr/actionBarSize"
             android:layout_width="match_parent"
             app:layout_scrollFlags="scroll|enterAlways"
-            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             />
 
         <android.support.design.widget.TabLayout
@@ -29,7 +29,7 @@
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             app:layout_scrollFlags="enterAlways"
-            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
 
     </android.support.design.widget.AppBarLayout>
 
