--- a/uiautomation/src/main/res/layout/fragment_dark_toolbaronly.xml
+++ b/uiautomation/src/main/res/layout/fragment_dark_toolbaronly.xml
@@ -14,7 +14,7 @@
             android:id="@+id/toolbar_frag_toolbar"
             android:layout_height="?attr/actionBarSize"
             android:layout_width="match_parent"
-            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             />
     </android.support.design.widget.AppBarLayout>
 
