Listing Automation naming simplified
Change-Id: Ib11b2acf9271a7e934daf0b7ee949f6edf3d0ba3

--- a/app/src/main/res/layout/recycler_cell_title.xml
+++ b/app/src/main/res/layout/recycler_cell_title.xml
@@ -2,7 +2,7 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data>
-        <variable name="titleRModel" type = "com.happyfall.android.demo.cells.TitleRModel"/>
+        <variable name="titleRModel" type = "com.happyfall.android.demo.cells.TitleRModelListing"/>
     </data>
 
     <LinearLayout
