--- a/app/src/main/res/layout/recycler_cell_checklist.xml
+++ b/app/src/main/res/layout/recycler_cell_checklist.xml
@@ -6,7 +6,7 @@
 
         <import type="android.view.View"/>
 
-        <variable name="checklistRModel" type = "com.happyfall.android.demo.cells.ChecklistRModel"/>
+        <variable name="checklistRModel" type = "com.happyfall.android.demo.cells.ChecklistRModelListing"/>
 
     </data>
 
