--- a/swiftui/src/main/res/layout/activity_drawer.xml
+++ b/swiftui/src/main/res/layout/activity_drawer.xml
@@ -1,6 +1,6 @@
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/spdrawer_layout"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="0dp"
@@ -8,13 +8,13 @@
 
     <!-- The Main Content View-->
     <FrameLayout
-        android:id="@+id/spdrawer_content_frame"
+        android:id="@+id/drawer_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
     <!-- Drawer-->
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/spdrawer_recyclerview_drawer"
+        android:id="@+id/menu_recyclerview"
         android:layout_width="260dp"
         android:layout_height="match_parent"
         android:layout_gravity="start"
