Bug fixes in Listing Data addAll method
Change-Id: I4e0a8619b3e04dfe130b23329fa79ee4aa3b4e22

--- a/swiftui/src/main/res/layout/fragment_dark_toolbaronly.xml
+++ b/swiftui/src/main/res/layout/fragment_dark_toolbaronly.xml
@@ -1,10 +1,10 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.happyfall.android.swiftui.toolbar.SPToolBarFragment"
-    android:orientation="vertical">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
+    tools:context=".reuse.activity.DrawerToolbarActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -24,4 +24,4 @@
         android:layout_height="0dp"
         android:layout_weight="1"/>
 
-</LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
