--- a/swiftui/src/main/res/layout/activity_drawer.xml
+++ b/swiftui/src/main/res/layout/activity_drawer.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="0dp"
-    tools:context=".HomeActivity">
+    tools:context=".reuse.activity.DrawerToolbarActivity">
 
     <!-- The Main Content View-->
     <FrameLayout
