--- a/swiftui/src/main/res/layout/fragment_dark_toolbaronly.xml
+++ b/swiftui/src/main/res/layout/fragment_dark_toolbaronly.xml
@@ -1,4 +1,4 @@
-<android.support.design.widget.CoordinatorLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -24,4 +24,4 @@
         android:layout_height="0dp"
         android:layout_weight="1"/>
 
-</android.support.design.widget.CoordinatorLayout>
+</LinearLayout>
