--- a/swiftui/src/main/res/layout/fragment_dark_toolbar_tabs.xml
+++ b/swiftui/src/main/res/layout/fragment_dark_toolbar_tabs.xml
@@ -33,4 +33,14 @@
 
     </android.support.design.widget.AppBarLayout>
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:layout_gravity="end|bottom"
+        android:layout_marginRight="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"/>
+
 </android.support.design.widget.CoordinatorLayout>
