Pro Guard Warnings removed
Change-Id: I6d54f6946b80058af6ba21f135679fc03e453f4d

--- a/app/src/main/res/layout/recycler_cell_checklist.xml
+++ b/app/src/main/res/layout/recycler_cell_checklist.xml
@@ -13,7 +13,7 @@
     <LinearLayout
         android:orientation="vertical" android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:setOnClickListener="@{checklistRModel.onClickListener}">
+        app:setOnClickListener="@{checklistRModel::onClickListener}">
 
         <LinearLayout
             android:layout_height="wrap_content"
